tests/error/tensor_errors/poly_tensor.err
Error: Unsupported (at $FILE:14:11)
   | 
12 | @guppy(module)
13 | def main() -> int:
14 |     return (foo, foo)(42, 42)
   |            ^^^^^^^^^^ Polymorphic function tensors are not supported

Guppy compilation failed due to 1 previous error
